// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`asterisk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
**123**

=====================================output=====================================
**123**

================================================================================
`;

exports[`underscore.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
__123__

=====================================output=====================================
**123**

================================================================================
`;
